--- a/app/src/main/res/drawable/new_home_item_bg.xml
+++ b/app/src/main/res/drawable/new_home_item_bg.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list  xmlns:android="http://schemas.android.com/apk/res/android">
-<item>
+<item
+    android:left="-3dp"
+    android:bottom="-3dp"
+    android:top="-3dp">
+
     <shape
         android:shape="rectangle">
         <stroke
