1.修复软件BUG 修改驳回的周报状态值未发生改变的问题 2.修改用户权限问题

--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -73,16 +73,16 @@
                 android:layout_centerVertical="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/bum"/>
+                android:src="@drawable/xingming"/>
             <TextView
-                android:text="部门"
+                android:text="电话"
                 android:textSize="15sp"
                 android:layout_marginLeft="25dp"
                 android:layout_centerVertical="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
-                android:text="@{personalInfo.uuid}"
+                android:text="@{personalInfo.mobile}"
                 android:id="@+id/personal_depart"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="15dp"
@@ -111,7 +111,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
-                android:text=""
+                android:text="@{personalInfo.roleName}"
                 android:id="@+id/personal_jobs"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="15dp"
