--- a/app/src/main/res/drawable/white_fill_board.xml
+++ b/app/src/main/res/drawable/white_fill_board.xml
@@ -6,7 +6,9 @@
         <shape
             android:shape="rectangle">
             <corners
-                android:radius="20dp"></corners>
+                android:radius="20dp">
+
+            </corners>
             <solid
                 android:width="1dp"
                 android:color="#FFFFFF" />
